--- a/gallery.html
+++ b/gallery.html
@@ -25,8 +25,71 @@
 
     <div class="background-image"></div>
 
+    <div id="image-container" class="image-container">
+        <div class="hover-image-container">
+            <img src="catimage.jpg" alt="drawing of cat" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">this is an example of what the description of an image could be. in this space one could describe the image!</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="twiximage.jpg" alt="drawing of twix candy" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">drawing of a candy bar etc...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="scream.jpg" alt="collage" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">image of a collage etc...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="dogshugging.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">dogs hugging...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="dotunicorn.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">dot style unicorn...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="fargo.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">drawing of dog...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="fooddrawing.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">drawing of food...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="fruit.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">drawing of fruit...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="greenbird.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">drawing of a green bird...</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="heartdrawing.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">drawing of a heart thing..</div>
+        </div>
+        <div class="hover-image-container">
+            <img src="beetle.jpg" alt="drawing of beetle" class="hover-image">
+            <div class="hover-image-overlay"></div>
+            <div class="hover-image-text">drawing of a beetle etc...</div>
+        </div>
+    </div>
 
     <script src="gallery.js"></script>
+
+    <div class="background-image"></div>
+
+    <footer>
+        <p style="text-align: center; font-size: 10px; color: #555;">&copy; 2024 Iris Westerman. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
