--- a/index.html
+++ b/index.html
@@ -137,25 +137,33 @@
              'images/rabbit.jpg'
         ];
 
-        // to change homescreen 
-     // Add this logging statement to check if `imagePool` is correctly populated
-console.log("Image pool:", imagePool);
+        var displayedIndices = [];
 
-// Modify `changeImage` function to log the changes
+        // to change homescreen 
+
 function changeImage() {
     console.log("Changing images...");
     var displayedImages = document.querySelectorAll('.hover-image');
+
     displayedImages.forEach(image => {
-        var randomIndex = Math.floor(Math.random() * imagePool.length);
+        var randomIndex;
+        do {
+            randomIndex = Math.floor(Math.random() * imagePool.length);
+        } while (displayedIndices.includes(randomIndex));
+   
+        displayedIndices.push(randomIndex);
+        
+        if (displayedIndices.length === imagePool.length) {
+            displayedIndices = [];
+        }
+
         var randomImage = imagePool[randomIndex];
         image.src = randomImage;
         console.log("Image source updated:", image.src);
     });
 }
 
-// Add logging to check if `changeImage` is being called
-console.log("Setting interval for changeImage...");
-setInterval(changeImage, 7000);
+    setInterval(changeImage, 7000); // 7 seconds 5/22/24
     </script>
 
     <!--
