edit image shuffle delay

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ function changeImage() {
     });
 }
 
-    setInterval(changeImage, 7000); // 7 seconds 5/22/24
+    setInterval(changeImage, 4000); // edit to four seconds idk! 7/15/24
     </script>
 
     <!--
