--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
         <h1><a href="index.html">gallery</a></h1>
         <div class="header-links">
             <a href="index.html">home</a>
-            <a href="gallery.html">gallery</a>
+          <!--  <a href="gallery.html">gallery</a> -->
             <a href="about.html">about</a>
             <a href="contact.html">contact</a>
         </div>
