--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <a href="index.html">home</a>
             <a href="gallery.html">gallery</a>
             <a href="about.html">about</a>
-            <a href="contact.html">contact</a>
+        <!--    <a href="contact.html">contact</a> -->
         </div>
     </div>
 </header>
