--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <div class="header-links">
             <a href="index.html">home</a>
             <a href="gallery.html">gallery</a>
-            <a href="about.html">about</a>
+           <!-- <a href="about.html">about</a> -->
             <a href="contact.html">contact</a>
         </div>
     </div>
